2006-04-16 10:56  bchiara

	* AUTHORS, ChangeLog, NEWS, html/FAQ.html, html/NEWS.html: Updated
	docs

2006-04-16 09:06  bchiara

	* doc/xmldocs.make: another scrollkeeper fix

2006-04-15 18:19  bchiara

	* ChangeLog, Makefile.am, configure.in: Check for
	gethostbyaddr,gethostbyaddr_r also in libnsl (solaris).

2006-04-15 17:27  bchiara

	* ChangeLog, Makefile.am, configure.in, doc/Makefile.am,
	doc/omf.make, doc/xmldocs.make, src/Makefile.am: Changes to go
	around scrollkeeper oddities and other cross-platform fixes.

2006-04-13 19:52  bchiara

	* config.h.in, configure.in, src/thread_resolve.c: Tweakings to
	better handle systems without gethostbyaddr_r (OSX). Thanks to
	Jeffrey G. Gomberg for pointing out.

2006-04-07 18:20  bchiara

	* NEWS, etherape.1, html/FAQ.html, html/NEWS.html, src/names.c:
	fixed an overzealous warning on netbios name decoding, added some
	faqs

2006-03-29 19:12  bchiara

	* ChangeLog, NEWS, configure.in, doc/omf.make, doc/xmldocs.make,
	po/es.po, po/etherape.pot, po/fr.po, po/nl.po, po/tr.po,
	src/diagram.c: preparing for new release

2006-03-25 07:07  bchiara

	* src/: capture.c, globals.h, main.c: Added Ben Allen's patch to
	provide the 'zero-delay' when playing back capture files.

2006-03-10 09:29  bchiara

	* acinclude.m4, src/capture.c, src/datastructs.c, src/diagram.c,
	src/globals.h, src/links.c, src/menus.c, src/node.c,
	src/protocols.c, src/traffic_stats.c: minor changes. Rephrased
	pcap-devel check to be more clear.

2006-02-04 07:03  bchiara

	* doc/etherape-C.omf, doc/omf.make, doc/xmldocs.make,
	doc/C/Makefile.am, doc/C/etherape-C.omf, doc/C/etherape.sgml,
	doc/C/topic.dat, src/capture.c: small changes to enhance
	compatibility.	added scrollkeeper registration to new manual and
	removed old one.

2006-01-26 07:18  bchiara

	* src/: capture.c, conversations.c, conversations.h,
	decode_proto.c, decode_proto.h, pkt_info.h, traffic_stats.c: Small
	tweaks, corrected conversation clearing

2006-01-24 06:54  bchiara
